docs: Add endpoint docs
Bug: T317721
